; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiCalledEnumIpTable.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiCalledEnumIpTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_HUBNAME_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"HubName\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @SiCalledEnumIpTable(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i32, i32* @MAX_HUBNAME_LEN, align 4
  %12 = add nsw i32 %11, 1
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %6, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %7, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %2
  %19 = load i32*, i32** %5, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %18, %2
  %22 = call i32* (...) @NewPack()
  store i32* %22, i32** %3, align 8
  store i32 1, i32* %10, align 4
  br label %39

23:                                               ; preds = %18
  %24 = load i32*, i32** %5, align 8
  %25 = trunc i64 %13 to i32
  %26 = call i32 @PackGetStr(i32* %24, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %15, i32 %25)
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %23
  %29 = call i32* (...) @NewPack()
  store i32* %29, i32** %3, align 8
  store i32 1, i32* %10, align 4
  br label %39

30:                                               ; preds = %23
  %31 = call i32 @Zero(i32* %8, i32 4)
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @SiEnumIpTable(i32* %32, i8* %15, i32* %8)
  %34 = call i32* (...) @NewPack()
  store i32* %34, i32** %9, align 8
  %35 = load i32*, i32** %9, align 8
  %36 = call i32 @OutRpcEnumIpTable(i32* %35, i32* %8)
  %37 = call i32 @FreeRpcEnumIpTable(i32* %8)
  %38 = load i32*, i32** %9, align 8
  store i32* %38, i32** %3, align 8
  store i32 1, i32* %10, align 4
  br label %39

39:                                               ; preds = %30, %28, %21
  %40 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %40)
  %41 = load i32*, i32** %3, align 8
  ret i32* %41
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @NewPack(...) #2

declare dso_local i32 @PackGetStr(i32*, i8*, i8*, i32) #2

declare dso_local i32 @Zero(i32*, i32) #2

declare dso_local i32 @SiEnumIpTable(i32*, i8*, i32*) #2

declare dso_local i32 @OutRpcEnumIpTable(i32*, i32*) #2

declare dso_local i32 @FreeRpcEnumIpTable(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
